@@ -161,4 +161,8 @@
 	<SERVICE CLASS="org.gjt.sp.jedit.datatransfer.JEditTransferableService" NAME="application/x-java-jEdit-rich-text">
 		new org.gjt.sp.jedit.datatransfer.RichJEditTextTransferableService();
 	</SERVICE>
+
+	<SERVICE CLASS="org.gjt.sp.jedit.gui.tray.JEditTrayIcon" NAME="swing">
+		new org.gjt.sp.jedit.gui.tray.JEditSwingTrayIcon();
+	</SERVICE>
 </SERVICES>
